Framework for core tests